namespace MESNET.Common.Shared;

public sealed record Location(double Latitude, double Longitude);
